@@ -115,14 +115,14 @@ Lane,Sample_ID,Sample_Name,GenomeFolder,Index,Index2,alignments_in_bam,bait_name
 4,8215112,ERS351319,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\Mus_musculus\NCBIm37\all\fasta\,CGAGGCTG,CTAAGCCT,1,,qPCR only,CGAGGCTGCTAAGCCT,ncb@sanger.ac.uk ola@ebi.ac.uk,,ncb@sanger.ac.uk,ola@ebi.ac.uk,0,0,,,mES_ai2_s2_cell94 8215112,mus musculus,10090,S0917,1366,Single-cell analysis of the transcriptomic heterogeneity of ground state pluripotency,,,from:300 to:1000,ERS351319,Mus Musculus,,mRNAseq Nextera library made from G4 ES cell line from a male blastocyst from a C57BL%2F6Ncr male x 129S6%2FSvEvTac female,1706483,mES_ai2_s2_cell94,mES_ai2_s2_cell94,Mus_musculus (NCBIm37),,168,ERP003293,0,0,This study aims to investigate the transcriptomic heterogeneity of mouse embryonic stem cells (mES cells) in different culturing conditions with single-cell mRNA-seq technology. Previous studies have reported heterogeneous and differential allelic expression of specific pluripotency genes%2C e.g. Nanog%2C in mES cells in different culturing conditions. The fluctuation of gene expression has been linked to drift of pluripotent state. In this study%2C we will dissect the transcriptome of mouse ES cells culturing in conventiaonal serum%2FLIF and 2i%2FLIF conditions at the single-cell level. The usage of a hybrid mouse ES cell line in this study provides additional insight into differential allelic expression in these two culturing conditions. The data generated in this study will shed light on the regulation of pluripotency network.%0A ,2658,Single-cell analysis of the transcriptomic heterogeneity of ground state pluripotency,Mus_musculus (NCBIm37),Single-cell analysis of the transcriptomic heterogeneity of ground state pluripotency     ,94,
 4,8215113,ERS351320,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\Mus_musculus\NCBIm37\all\fasta\,AAGAGGCA,CTAAGCCT,1,,qPCR only,AAGAGGCACTAAGCCT,ncb@sanger.ac.uk ola@ebi.ac.uk,,ncb@sanger.ac.uk,ola@ebi.ac.uk,0,0,,,mES_ai2_s2_cell95 8215113,mus musculus,10090,S0917,1366,Single-cell analysis of the transcriptomic heterogeneity of ground state pluripotency,,,from:300 to:1000,ERS351320,Mus Musculus,,mRNAseq Nextera library made from G4 ES cell line from a male blastocyst from a C57BL%2F6Ncr male x 129S6%2FSvEvTac female,1706484,mES_ai2_s2_cell95,mES_ai2_s2_cell95,Mus_musculus (NCBIm37),,168,ERP003293,0,0,This study aims to investigate the transcriptomic heterogeneity of mouse embryonic stem cells (mES cells) in different culturing conditions with single-cell mRNA-seq technology. Previous studies have reported heterogeneous and differential allelic expression of specific pluripotency genes%2C e.g. Nanog%2C in mES cells in different culturing conditions. The fluctuation of gene expression has been linked to drift of pluripotent state. In this study%2C we will dissect the transcriptome of mouse ES cells culturing in conventiaonal serum%2FLIF and 2i%2FLIF conditions at the single-cell level. The usage of a hybrid mouse ES cell line in this study provides additional insight into differential allelic expression in these two culturing conditions. The data generated in this study will shed light on the regulation of pluripotency network.%0A ,2658,Single-cell analysis of the transcriptomic heterogeneity of ground state pluripotency,Mus_musculus (NCBIm37),Single-cell analysis of the transcriptomic heterogeneity of ground state pluripotency     ,95,
 4,8215114,ERS351321,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\Mus_musculus\NCBIm37\all\fasta\,GTAGAGGA,CTAAGCCT,1,,qPCR only,GTAGAGGACTAAGCCT,ncb@sanger.ac.uk ola@ebi.ac.uk,,ncb@sanger.ac.uk,ola@ebi.ac.uk,0,0,,,mES_ai2_s2_cell96 8215114,mus musculus,10090,S0917,1366,Single-cell analysis of the transcriptomic heterogeneity of ground state pluripotency,,,from:300 to:1000,ERS351321,Mus Musculus,,mRNAseq Nextera library made from G4 ES cell line from a male blastocyst from a C57BL%2F6Ncr male x 129S6%2FSvEvTac female,1706485,mES_ai2_s2_cell96,mES_ai2_s2_cell96,Mus_musculus (NCBIm37),,168,ERP003293,0,0,This study aims to investigate the transcriptomic heterogeneity of mouse embryonic stem cells (mES cells) in different culturing conditions with single-cell mRNA-seq technology. Previous studies have reported heterogeneous and differential allelic expression of specific pluripotency genes%2C e.g. Nanog%2C in mES cells in different culturing conditions. The fluctuation of gene expression has been linked to drift of pluripotent state. In this study%2C we will dissect the transcriptome of mouse ES cells culturing in conventiaonal serum%2FLIF and 2i%2FLIF conditions at the single-cell level. The usage of a hybrid mouse ES cell line in this study provides additional insight into differential allelic expression in these two culturing conditions. The data generated in this study will shed light on the regulation of pluripotency network.%0A ,2658,Single-cell analysis of the transcriptomic heterogeneity of ground state pluripotency,Mus_musculus (NCBIm37),Single-cell analysis of the transcriptomic heterogeneity of ground state pluripotency     ,96,
-4,6200285,phiX_for_spiked_buffers,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\PhiX\Illumina\all\fasta\,ACAACGCAAT,,1,,,ACAACGCAAT,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiX_PS_20120919,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,168,,0,0,None,198,Illumina Controls,,,168,
+4,6200285,phiX_for_spiked_buffers,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\PhiX\Illumina\all\fasta\,ACAACGCA,,1,,,ACAACGCAAT,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiX_PS_20120919,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,168,,0,0,None,198,Illumina Controls,,,168,
 5,8269740,EGAN00001173643,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\Homo_sapiens\CGP_GRCh37.NCBI.allchr_MT\all\fasta\,,,1,,No PCR,,cdt@sanger.ac.uk cs4@sanger.ac.uk je6@sanger.ac.uk las@sanger.ac.uk lm5@sanger.ac.uk sm2@sanger.ac.uk som@sanger.ac.uk,cdt@sanger.ac.uk je6@sanger.ac.uk las@sanger.ac.uk som@sanger.ac.uk,cdt@sanger.ac.uk cs4@sanger.ac.uk lm5@sanger.ac.uk sm2@sanger.ac.uk,sm2@sanger.ac.uk,0,0,8381740,0,PD14393b_wg 8269740,Human,9606,S0814,1422,CGP Core Sequencing 10%2F13 to 09%2F14,,5676016,from:300 to:500,EGAN00001173643,Homo sapiens,,,1712041,PD14393b_wg,PD14393b,,,168,EGAS00001000290,0,0,Wholegenome libraries will be prepared from at least two serial samples reflecting different stages of disease progression and matched constitutional DNA for 30 Myeloproliferative Disease samples. Five lanes of Illumina HiSeq sequencing will be performed on each of the tumour samples and four lanes for each of the constitutional DNA. Sequencing data will mapped to build 37 of the human reference genome and analysis will be performed to characterize the spectrum of somatic variation present in these samples including single base pair mutations%2C insertions%2C deletions as well as larger structural variants and genomic rearrangements. ,2239,MPN Whole Genomes,Homo_sapiens (CGP_GRCh37.NCBI.allchr_MT),Myeloproliferative Disease Whole Genomes,,
 6,8324592,ERS354532,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\Mus_musculus\GRCm38\all\fasta\,GAGATTCC,TAATCTTA,1,,Pre-quality controlled,GAGATTCCTAATCTTA,ms27@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,ms27@sanger.ac.uk,0,0,,,T_BCM1_F4 8324592,Mouse,10090,S1553,1238,Mouse model to quantify genotype-epigenotype variations,,,from:100 to:1000,ERS354532,Mus musculus,,RNA,1694494,T_BCM1_F4,RT_37,,,168,ERP002223,0,0,In order to examine the impact of genetic variation on epigenetic marking and control of gene expression%2C this study has been initiated using two inbred strains of mice%2C C57BL%2F6J and CAST%2FEij which genomes indicate substantial structural and nucleotide variation.  Stocks of adult C57BL%2F6J and CAST%2FEij mice as well as CAST%2FBL6 and BL6%2FCAST reciprocal hybrids are employed for isolation of pure and synchronous populations of B and T-lymphocytes. RNA-Seq expression analysis will be performed in total RNA extracted from B-lymphocytes isolated from males and females of both strains and hybrids.%0A %0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,2501,Mouse model to quantify genotype-epigenotype variations_RNA,Mus_musculus (GRCm38),Mouse model to quantify genotype-epigenotype variations     ,64,
 6,8324593,ERS354533,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\Mus_musculus\GRCm38\all\fasta\,ATTCAGAA,TAATCTTA,1,,Pre-quality controlled,ATTCAGAATAATCTTA,ms27@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,ms27@sanger.ac.uk,0,0,,,T_BCM1_F5 8324593,Mouse,10090,S1553,1238,Mouse model to quantify genotype-epigenotype variations,,,from:100 to:1000,ERS354533,Mus musculus,,RNA,1694495,T_BCM1_F5,RT_38,,,168,ERP002223,0,0,In order to examine the impact of genetic variation on epigenetic marking and control of gene expression%2C this study has been initiated using two inbred strains of mice%2C C57BL%2F6J and CAST%2FEij which genomes indicate substantial structural and nucleotide variation.  Stocks of adult C57BL%2F6J and CAST%2FEij mice as well as CAST%2FBL6 and BL6%2FCAST reciprocal hybrids are employed for isolation of pure and synchronous populations of B and T-lymphocytes. RNA-Seq expression analysis will be performed in total RNA extracted from B-lymphocytes isolated from males and females of both strains and hybrids.%0A %0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,2501,Mouse model to quantify genotype-epigenotype variations_RNA,Mus_musculus (GRCm38),Mouse model to quantify genotype-epigenotype variations     ,65,
-6,6200285,phiX_for_spiked_buffers,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\PhiX\Illumina\all\fasta\,ACAACGCAAT,,1,,,ACAACGCAAT,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiX_PS_20120919,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,168,,0,0,None,198,Illumina Controls,,,168,
+6,6200285,phiX_for_spiked_buffers,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\PhiX\Illumina\all\fasta\,ACAACGCA,,1,,,ACAACGCAAT,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiX_PS_20120919,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,168,,0,0,None,198,Illumina Controls,,,168,
 7,8324594,ERS354534,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\Mus_musculus\GRCm38\all\fasta\,GAGATTCC,CAGGACGT,1,,Pre-quality controlled,GAGATTCCCAGGACGT,ms27@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,ms27@sanger.ac.uk,0,0,,,T_CBF1_G4 8324594,Mouse,10090,S1553,1238,Mouse model to quantify genotype-epigenotype variations,,,from:100 to:1000,ERS354534,Mus musculus,,RNA,1694496,T_CBF1_G4,RT_39,,,168,ERP002223,0,0,In order to examine the impact of genetic variation on epigenetic marking and control of gene expression%2C this study has been initiated using two inbred strains of mice%2C C57BL%2F6J and CAST%2FEij which genomes indicate substantial structural and nucleotide variation.  Stocks of adult C57BL%2F6J and CAST%2FEij mice as well as CAST%2FBL6 and BL6%2FCAST reciprocal hybrids are employed for isolation of pure and synchronous populations of B and T-lymphocytes. RNA-Seq expression analysis will be performed in total RNA extracted from B-lymphocytes isolated from males and females of both strains and hybrids.%0A %0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,2501,Mouse model to quantify genotype-epigenotype variations_RNA,Mus_musculus (GRCm38),Mouse model to quantify genotype-epigenotype variations     ,76,
 7,8324595,ERS354535,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\Mus_musculus\GRCm38\all\fasta\,ATTCAGAA,CAGGACGT,1,,Pre-quality controlled,ATTCAGAACAGGACGT,ms27@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,ms27@sanger.ac.uk,0,0,,,T_CBF1_G5 8324595,Mouse,10090,S1553,1238,Mouse model to quantify genotype-epigenotype variations,,,from:100 to:1000,ERS354535,Mus musculus,,RNA,1694497,T_CBF1_G5,RT_40,,,168,ERP002223,0,0,In order to examine the impact of genetic variation on epigenetic marking and control of gene expression%2C this study has been initiated using two inbred strains of mice%2C C57BL%2F6J and CAST%2FEij which genomes indicate substantial structural and nucleotide variation.  Stocks of adult C57BL%2F6J and CAST%2FEij mice as well as CAST%2FBL6 and BL6%2FCAST reciprocal hybrids are employed for isolation of pure and synchronous populations of B and T-lymphocytes. RNA-Seq expression analysis will be performed in total RNA extracted from B-lymphocytes isolated from males and females of both strains and hybrids.%0A %0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,2501,Mouse model to quantify genotype-epigenotype variations_RNA,Mus_musculus (GRCm38),Mouse model to quantify genotype-epigenotype variations     ,77,
-7,6200285,phiX_for_spiked_buffers,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\PhiX\Illumina\all\fasta\,ACAACGCAAT,,1,,,ACAACGCAAT,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiX_PS_20120919,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,168,,0,0,None,198,Illumina Controls,,,168,
+7,6200285,phiX_for_spiked_buffers,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\PhiX\Illumina\all\fasta\,ACAACGCA,,1,,,ACAACGCAAT,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiX_PS_20120919,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,168,,0,0,None,198,Illumina Controls,,,168,
 8,8324596,ERS354536,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\Mus_musculus\GRCm38\all\fasta\,GAGATTCC,GTACTGAC,1,,Pre-quality controlled,GAGATTCCGTACTGAC,ms27@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,ms27@sanger.ac.uk,0,0,,,T_CBM2_H4 8324596,Mouse,10090,S1553,1238,Mouse model to quantify genotype-epigenotype variations,,,from:100 to:1000,ERS354536,Mus musculus,,RNA,1694498,T_CBM2_H4,RT_41,,,168,ERP002223,0,0,In order to examine the impact of genetic variation on epigenetic marking and control of gene expression%2C this study has been initiated using two inbred strains of mice%2C C57BL%2F6J and CAST%2FEij which genomes indicate substantial structural and nucleotide variation.  Stocks of adult C57BL%2F6J and CAST%2FEij mice as well as CAST%2FBL6 and BL6%2FCAST reciprocal hybrids are employed for isolation of pure and synchronous populations of B and T-lymphocytes. RNA-Seq expression analysis will be performed in total RNA extracted from B-lymphocytes isolated from males and females of both strains and hybrids.%0A %0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,2501,Mouse model to quantify genotype-epigenotype variations_RNA,Mus_musculus (GRCm38),Mouse model to quantify genotype-epigenotype variations     ,88,
 8,8324597,ERS354537,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\Mus_musculus\GRCm38\all\fasta\,ATTCAGAA,GTACTGAC,1,,Pre-quality controlled,ATTCAGAAGTACTGAC,ms27@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,ms27@sanger.ac.uk,0,0,,,T_CBM2_H5 8324597,Mouse,10090,S1553,1238,Mouse model to quantify genotype-epigenotype variations,,,from:100 to:1000,ERS354537,Mus musculus,,RNA,1694499,T_CBM2_H5,RT_42,,,168,ERP002223,0,0,In order to examine the impact of genetic variation on epigenetic marking and control of gene expression%2C this study has been initiated using two inbred strains of mice%2C C57BL%2F6J and CAST%2FEij which genomes indicate substantial structural and nucleotide variation.  Stocks of adult C57BL%2F6J and CAST%2FEij mice as well as CAST%2FBL6 and BL6%2FCAST reciprocal hybrids are employed for isolation of pure and synchronous populations of B and T-lymphocytes. RNA-Seq expression analysis will be performed in total RNA extracted from B-lymphocytes isolated from males and females of both strains and hybrids.%0A %0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,2501,Mouse model to quantify genotype-epigenotype variations_RNA,Mus_musculus (GRCm38),Mouse model to quantify genotype-epigenotype variations     ,89,
-8,6200285,phiX_for_spiked_buffers,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\PhiX\Illumina\all\fasta\,ACAACGCAAT,,1,,,ACAACGCAAT,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiX_PS_20120919,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,168,,0,0,None,198,Illumina Controls,,,168,
+8,6200285,phiX_for_spiked_buffers,C:\Illumina\MiSeq Reporter\Genomes\WTSI_references\PhiX\Illumina\all\fasta\,ACAACGCA,,1,,,ACAACGCAAT,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiX_PS_20120919,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,168,,0,0,None,198,Illumina Controls,,,168,
